--- a/pages/product_facial.html
+++ b/pages/product_facial.html
@@ -4,8 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="../css/product.css">
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css">
 </head>
 <body>
-    product_facial.html
+<!-- product_main 공통 -->
+    <div class="product_main">
+        <video class="product_video" autoplay muted  loop playsinline>
+            <source src="../img/products/00.video.mp4">
+        </video>
+        <div class="product_mainTxt">
+            <h1>Products</h1>
+            <p>페이셜라인</p>
+        </div>
+    </div>
+
+<!-- 메뉴 -->
+    <div class="product_menus">
+        <a href="product.html">전체보기</a><span class="product_menusBar"></span>
+        <a href="product_body.html">바디라인</a><span class="product_menusBar"></span>
+        <a href="product_hair.html">헤어라인</a><span class="product_menusBar"></span>
+        <a href="product_facial.html" class="product_menus_bold">페이셜라인</a>
+    </div>
+
+<!-- 2 Page -->
+<div class="product_2page_same">
+    <div class="product_2page_samegridBox">
+        <div class="product_2page_samegrid">
+            <img src="../img/products/m21_cate1_img.jpg" alt="productbody">
+        </div>
+        <div class="product_2page_samegrid">
+            <div class="product_2page_gridT">
+                <h3>페이셜라인</h3>
+            </div>
+            <div class="product_2page_gridT">
+                <div></div>
+                <div></div>
+            </div>
+            <div class="product_2page_gridT">
+                <p>
+                    맑고 고요한 아침 숲의 공기처럼, 피부에 스며드는<br>
+                    "Watered Soil" 향은 하루를 리셋하는 힐링의 시작입니다.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 3 Page -->
+<div class="product_page3_outBox">
+        <div class="product_page3">
+            <div class="product_page3_gridBox">
+                <div class="product_page3_gridBox_product">
+                    <div class="product_page3_imgbox">
+                        <img src="../img/products/thum_img_skin.jpg" alt="bodylotion">
+                    </div>
+                    <div class="product_page3_textBox">
+                        <h3>VYOR 바이오르 크림 스킨</h3>
+                        <p>64,000원<span class="product_page3_bar"></span>300ml</p>
+                    </div>
+                </div>
+                <div class="product_page3_gridBox_product">
+                    <div class="product_page3_imgbox">
+                        <img src="../img/products/thum_img_emulsion.jpg" alt="bodylotion">
+                    </div>
+                    <div class="product_page3_textBox">
+                        <h3>VYOR 바이오르 크림 에멀젼</h3>
+                        <p>69,000원<span class="product_page3_bar"></span>300ml</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product_page3_pagenum">
+                <h4>1</h4>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
