--- a/pages/product_hair.html
+++ b/pages/product_hair.html
@@ -4,8 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="../css/product.css">
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css">
 </head>
 <body>
-    product_hair_.html
+<!-- product_main 공통 -->
+    <div class="product_main">
+        <video class="product_video" autoplay muted  loop playsinline>
+            <source src="../img/products/00.video.mp4">
+        </video>
+        <div class="product_mainTxt">
+            <h1>Products</h1>
+            <p>헤어라인</p>
+        </div>
+    </div>
+
+<!-- 메뉴 -->
+    <div class="product_menus">
+        <a href="product.html">전체보기</a><span class="product_menusBar"></span>
+        <a href="product_body.html">바디라인</a><span class="product_menusBar"></span>
+        <a href="product_hair.html" class="product_menus_bold">헤어라인</a><span class="product_menusBar"></span>
+        <a href="product_facial.html">페이셜라인</a>
+    </div>
+
+<!-- 2 Page -->
+<div class="product_2page_same">
+    <div class="product_2page_samegridBox">
+        <div class="product_2page_samegrid">
+            <img src="../img/products/m21_cate3_img.jpg" alt="productbody">
+        </div>
+        <div class="product_2page_samegrid">
+            <div class="product_2page_gridT">
+                <h3>헤어라인</h3>
+            </div>
+            <div class="product_2page_gridT">
+                <div></div>
+                <div></div>
+            </div>
+            <div class="product_2page_gridT">
+                <p>
+                    젖은 흙과 싱그러운 풀잎이 어우러진 "Watered Soil"향은<br>
+                    비가 갠 숲의 공기를 머금은 듯한 청량하고 평온한 기분을 선사합니다.<br>
+                    세정 후에도 은은하게 남아 하루의 피로를 씻어 냅니다.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 3 Page -->
+<div class="product_page3_outBox">
+        <div class="product_page3">
+            <div class="product_page3_gridBox">
+                <a href="product_hair_shampoo.html" class="product_page3_link">
+                    <div class="product_page3_gridBox_product">
+                        <div class="product_page3_imgbox">
+                            <img src="../img/products/thum_img_shampoo.jpg" alt="shampoo">
+                        </div>
+                        <div class="product_page3_textBox">
+                            <h3>VYOR 바이오르 샴푸</h3>
+                            <p>61,000원<span class="product_page3_bar"></span>500ml</p>
+                        </div>
+                    </div>
+                </a>
+                <div class="product_page3_gridBox_product">
+                    <div class="product_page3_imgbox">
+                        <img src="../img/products/thum_img_treatment.jpg" alt="bodylotion">
+                    </div>
+                    <div class="product_page3_textBox">
+                        <h3>VYOR 바이오르 트리트먼트</h3>
+                        <p>68,000원<span class="product_page3_bar"></span>500ml</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product_page3_pagenum">
+                <h4>1</h4>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
