--- a/pages/product_body.html
+++ b/pages/product_body.html
@@ -4,8 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="../css/product.css">
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css">
 </head>
 <body>
-    product_body.html
+<!-- product_main 공통 -->
+    <div class="product_main">
+        <video class="product_video" autoplay muted  loop playsinline>
+            <source src="../img/products/00.video.mp4">
+        </video>
+        <div class="product_mainTxt">
+            <h1>Products</h1>
+            <p>바디라인</p>
+        </div>
+    </div>
+
+<!-- 메뉴 -->
+    <div class="product_menus">
+        <a href="product.html">전체보기</a><span class="product_menusBar"></span>
+        <a href="product_body.html" class="product_menus_bold">바디라인</a><span class="product_menusBar"></span>
+        <a href="product_hair.html">헤어라인</a><span class="product_menusBar"></span>
+        <a href="product_facial.html">페이셜라인</a>
+    </div>
+
+<!-- 2 Page -->
+<div class="product_2page_same">
+    <div class="product_2page_samegridBox">
+        <div class="product_2page_samegrid">
+            <img src="../img/products/m21_cate2_img.jpg" alt="productbody">
+        </div>
+        <div class="product_2page_samegrid">
+            <div class="product_2page_gridT">
+                <h3>바디라인</h3>
+            </div>
+            <div class="product_2page_gridT">
+                <div></div>
+                <div></div>
+            </div>
+            <div class="product_2page_gridT">
+                <p>
+                    촉촉한 나무와 대지의 향이 가득 퍼지며<br>
+                    마치 숲속 샤워를 하는 듯한 정화의 경험을 선사합니다.<br>
+                    "Watered Soil" 향은 도시 속에서도 자연을 느끼게 해주는 향기입니다.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 3 Page -->
+<div class="product_page3_outBox">
+        <div class="product_page3">
+            <div class="product_page3_gridBox">
+                <a href="product_body_lotion.html" class="product_page3_link">
+                    <div class="product_page3_gridBox_product">
+                        <div class="product_page3_imgbox">
+                            <img src="../img/products/thum_img_body_lotion.jpg" alt="bodylotion">
+                        </div>
+                        <div class="product_page3_textBox">
+                            <h3>VYOR 바이오르 바디로션</h3>
+                            <p>84,000원<span class="product_page3_bar"></span>500ml</p>
+                        </div>
+                    </div>
+                </a>
+                <div class="product_page3_gridBox_product">
+                    <div class="product_page3_imgbox">
+                        <img src="../img/products/thum_img_body_wash.jpg" alt="bodylotion">
+                    </div>
+                    <div class="product_page3_textBox">
+                        <h3>VYOR 바이오르 바디 워시</h3>
+                        <p>65,000원<span class="product_page3_bar"></span>500ml</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product_page3_pagenum">
+                <h4>1</h4>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
