--- a/pages/product_hair_shampoo.html
+++ b/pages/product_hair_shampoo.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="../css/product.css">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css">
 
-
 </head>
 <body>
     <!-- product_main 공통 -->
@@ -18,7 +17,7 @@
         </video>
         <div class="product_mainTxt">
             <h1>Products</h1>
-            <p>바디라인</p>
+            <p>헤어라인</p>
         </div>
     </div>
 
@@ -35,37 +34,35 @@
         <div class="product_detail_gridBox">
             <div class="product_detail_grid">
                 <div class="product_detail_imgbox">
-                    <img src="../img/products/thum_img_body_lotion.jpg" alt="">
+                    <img src="../img/products/thum_img_shampoo.jpg" alt="">
                 </div>
             </div>
             <div class="product_detail_grid">
-                <a href="../pages/product_body.html" class="product_detail_gridT1">
+                <a href="../pages/product_hair.html" class="product_detail_gridT1">
                     <p>view list</p>
                     <div><img src="../img/etc/icon/btnMore_arr2.png" alt="arr2"></div>
                 </a>
                 <div class="product_detail_gridT2">
-                    <p>NMN<span class="gridT2_bar"></span>트라넥사믹애씨드<span class="gridT2_bar"></span>시어버터</p>
+                    <p>NMN<span class="gridT2_bar"></span>트라넥사믹애씨드<span class="gridT2_bar"></span>나이아신아마이드</p>
                 </div>
                 <div class="product_detail_gridT3">
-                    <h1>VYOR 바이오르 바디로션</h1>
+                    <h1>VYOR 바이오르 샴푸</h1>
                     <p>500ml</p>
                 </div>
                 <div class="product_detail_gridT4">
-                    <h1>84,000원</h1>
+                    <h1>61,000원</h1>
                 </div>
                 <div class="product_detail_gridT5">
                     <div>특징</div>
-                    <div>NMN이 피부를 활력 있게 가꿔주고 깊은 보습감 제공</div>
-                    <div>트라넥사믹애씨드로 피부톤 개선 및 미백 효과</div>
-                    <div>비건 시어버터로 풍부한 영양감 전달</div>
-                    <div>산뜻하고 빠르게 흡수되는 비건 로션</div>
+                    <div>두피와 모발을 동시에 케어하는 약산성 비건 샴푸</div>
+                    <div>천연 유래 계면활성제로 부드럽고 풍성한 거품 제공</div>
+                    <div>트라넥사믹애씨드로 두피의 민감도를 완화하고 유수분 밸런스 유지</div>
+                    <div>NMN 성분이 모발에 활력을 부여하여 건강하고 탄력 있는 머릿결 완성</div>
                     <a href="../pages/contact.html">제품 문의하기</a>
                 </div>
             </div>
         </div>
     </div>
-
-
 
 </body>
 </html>
