--- a/pages/brand.html
+++ b/pages/brand.html
@@ -187,10 +187,12 @@
 
                     <div class="brand4_Text">
                         <h2 style="font-weight: lighter">Watered soil</h2>
-                        <p>:</p>
-                        <p>LIGHT</p>
-                        <p>GRACEFUL</p>
-                        <p>EMBRACING</p>
+                        <div class="B4_pBox">
+                            <p>:</p>
+                            <p>LIGHT</p>
+                            <p>GRACEFUL</p>
+                            <p>EMBRACING</p>
+                        </div>
                     </div>
                 </div>
             </div>
