--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+
+        <link
+            rel="stylesheet"
+            as="style"
+            crossorigin
+            href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
+        />
+
         <link
             href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
             rel="stylesheet"
@@ -25,7 +33,7 @@
 
             <div class="contactText">
                 <h1>CONTACT</h1>
-                <p>contact</p>
+                <p style="font-size: 22px">CONTACT</p>
             </div>
         </section>
 
