샴푸 상세 수정

--- a/pages/product_hair_shampoo.html
+++ b/pages/product_hair_shampoo.html
@@ -24,8 +24,8 @@
 <!-- 메뉴 -->
     <div class="product_menus">
         <a href="product.html">전체보기</a><span class="product_menusBar"></span>
-        <a href="product_body.html" class="product_menus_bold">바디라인</a><span class="product_menusBar"></span>
-        <a href="product_hair.html">헤어라인</a><span class="product_menusBar"></span>
+        <a href="product_body.html">바디라인</a><span class="product_menusBar"></span>
+        <a href="product_hair.html" class="product_menus_bold">헤어라인</a><span class="product_menusBar"></span>
         <a href="product_facial.html">페이셜라인</a>
     </div>
 
