--- a/pages/brand.html
+++ b/pages/brand.html
@@ -207,6 +207,7 @@
                     SPICY FLORAL<br />
                     WOODY
                 </div>
+                <div class="BR5_Ininbox00"></div>
             </div>
 
             <div class="BR5_inbox3">
@@ -231,7 +232,7 @@
                 </div>
             </div>
 
-            <div class="BR5_inbox4">
+            <div class="BR5_inbox3">
                 <div class="BR5_imgBox">
                     <img src="../img/brand/m11_notes_bg2.jpg" alt="장미" />
                     <div class="BR5_imgtxt2">MIDDLE NOTE</div>
@@ -249,6 +250,42 @@
                     불러일으켜 내면과의 연결을 강화합니다.
                 </div>
             </div>
+
+            <div class="BR5_inbox3">
+                <div class="BR5_imgBox">
+                    <img src="../img/brand/m11_notes_bg3.jpg" alt="나뭇가지" />
+                    <div class="BR5_imgtxt3">BASE NOTE</div>
+                </div>
+
+                <div class="BR5_Ininbox3">
+                    MUSK,<br />
+                    SANDALWOOD,<br />
+                    PATCHOULI, OUDH
+                </div>
+                <div class="BR5_Ininbox4">
+                    <span style="color: #333">세련된 안정감</span><br /><br />
+                    머스크와 샌달우드의 깊고 부드러운 향기로 마무리된다.
+                    패출리와 오드의 이국적인 향기가 더해져 따뜻함과 세련미를<br />
+                    선사하며, 이끼의 자연스러운 향기가 최종적으로 마음의 평화를
+                    가져다주어 몰입의 여정을 더욱 풍성하고 안정감 있게<br />
+                    만들어줍니다.
+                </div>
+            </div>
         </section>
+
+        <!-- 섹션6 -->
+        <section id="brand_6">
+            <div class="BR6_imgBox">
+                <div>
+                    <img
+                        class="BR6_scr_log"
+                        src="../img/brand/m11_btmVisual_logo.png"
+                        alt="스크롤로고"
+                    />
+                </div>
+            </div>
+        </section>
+
+        <script></script>
     </body>
 </html>
