--- a/pages/brand_bi.html
+++ b/pages/brand_bi.html
@@ -161,7 +161,7 @@
                     />
                     <div class="B5_textBox">
                         <h2>Visual Tone & Manner</h2>
-                        <p>
+                        <p style="color: white">
                             VYOR는 여백을 충분히 활용한 미니멀하고 고급스러운
                             미학을 추구합니다.<br />
                             절제된 시각 표현을 통해 차분함, 집중감, 시대를
