--- a/pages/rndProduction.html
+++ b/pages/rndProduction.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>R&D</title>
+   <title>R&D Production</title>
 </head>
 <body>
    <section id="rnd_sec1" class="videoWrap rnd_sec">
@@ -14,16 +14,16 @@
 
       <div class="overlay">
          <h1>R&D</h1>
-         <p>연구분야</p>
+         <p>생산시설</p>
       </div>
    </section>
 
    <section id="rnd_sec2" class="rnd_content rnd_production_sec2 rnd_sec">
       <div class="mid_menu">
          <ul class="sub_menu">
-            <li><a href="#">테크놀로지</a></li>
-            <li><a href="#">연구분야</a></li>
-            <li><a href="#">생산시설</a></li>
+            <li><a href="#rndTechnology">테크놀로지</a></li>
+            <li><a href="#rndResearch">연구분야</a></li>
+            <li><a href="#"><strong>생산시설</strong></a></li>
          </ul>
       </div>
       <div class="pro_grid">
@@ -119,6 +119,5 @@
          </div>
       </div>   
    </section>
-
 </body>
 </html>
