--- a/pages/rndResearch.html
+++ b/pages/rndResearch.html
@@ -4,11 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-   <title>R&D</title>
+   <title>R&D Tecnology</title>
 </head>
 <body>
    <section id="rnd_sec1" class="videoWrap rnd_sec">
@@ -25,9 +21,9 @@
    <section id="rnd_sec2" class="rnd_content  rnd_sec">
       <div class="mid_menu">
          <ul class="sub_menu">
-            <li><a href="#">테크놀로지</a></li>
-            <li><a href="#">연구분야</a></li>
-            <li><a href="#">생산시설</a></li>
+            <li><a href="#rndTechnology">테크놀로지</a></li>
+            <li><a href="#"><strong>연구분야</strong></a></li>
+            <li><a href="#rndProduction">생산시설</a></li>
          </ul>
       </div>
       <div class="frame3">
@@ -56,15 +52,9 @@
       <div class="grid_container">
          <div class="grid grid5">
             <div class="outImg">
-               <!-- <div class="innerImg">
-               </div> -->
                <div class="text_area">
                   <h4>피부 과학 기반의 포뮬러 설계</h4>
-                  <!-- <h1>PILKO COSPHARM</h1>
-                  <h2>기술력</h2>
-                  <div></div>
-                  <h5>VYOR은 PILKO COSPHARM과 첨단 연구 개발을 통해 탄생한<br>고기능성 비건 화장품 브랜드입니다.</h5> -->
-               </div>
+                  </div>
             </div>
          </div>
          <div class="grid grid6">
