--- a/pages/rndTechnology.html
+++ b/pages/rndTechnology.html
@@ -4,8 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <script src="/js/rnd.js" defer></script>
-   <title>R&D</title>
+   <title>R&D Technology</title>
 </head>
 <body>
    <section id="rnd_sec1" class="videoWrap rnd_sec">
@@ -22,9 +21,9 @@
    <section id="rnd_sec2" class="rnd_content  rnd_sec">
       <div class="mid_menu">
          <ul class="sub_menu">
-            <li><a data-page="rndTechnology.html">테크놀로지</a></li>
-            <li><a data-page="rndResearch.html">연구분야</a></li>
-            <li><a data-page="rndProduction.html">생산시설</a></li>
+            <li><a href="#"><strong>테크놀로지</strong></a></li>
+            <li><a href="#rndResearch">연구분야</a></li>
+            <li><a href="#rndProduction">생산시설</a></li>
          </ul>
       </div>
          <div class="frame1"></div>
@@ -112,39 +111,5 @@
          </div>
       </div>
    </section>
-      
-   <!-- 2. fetch로 불러오기 (script 생성) -->
-   <!-- <script>
-      document.addEventListener("DOMContentLoaded", function() {
-      // Header 불러오기
-      fetch("/components/header.html")
-         .then(response => response.text())
-         .then(html => {
-            document.getElementById("header").innerHTML = html;
-
-            // header.js 불러오기
-            const script = document.createElement("script");
-            script.src = "/js/header.js";
-            script.onload = function() {
-            console.log("header.js loaded!");
-            initHeader(); // header 초기화 함수 실행
-            };
-            script.onerror = function() {
-            console.error("header.js load failed");
-            };
-            document.body.appendChild(script);
-         })
-         .catch(err => console.error("header.html load failed", err));
-
-      // Footer 불러오기
-      fetch("/components/footer.html")
-         .then(response => response.text())
-         .then(html => {
-            document.getElementById("footer").innerHTML = html;
-         })
-         .catch(err => console.error("footer.html load failed", err));
-      });
-   </script> -->
-   
 </body>
 </html>
