--- a/pages/siteMap.html
+++ b/pages/siteMap.html
@@ -3,15 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  
-  <!-- <link rel="stylesheet" href="/css/rnd.css"> -->
-  <link rel="stylesheet" href="/css/sitemap.css">
-  <title>Document</title>
+  <title>sitemap</title>
 </head>
 <body>
   <section class="sitemap">
@@ -22,41 +14,39 @@
       <ul>
         <li class="menuLarge">Brand
           <ul class="menuSmall">
-            <li><a href="#" data-page="brand">브랜드소개</a></li>
-            <li><a href="#" data-page="brand_bi">BI소개</a></li>
+            <li><a href="#brand" data-page="brand">브랜드소개</a></li>
+            <li><a href="#brand_bi" data-page="brand_bi">BI소개</a></li>
           </ul>
         </li>
         <li class="menuLarge">Products
           <ul class="menuSmall">
-            <li><a href="#" data-page="products">전체보기</a></li>
-            <li><a href="#" data-page="products_body">바디라인</a></li>
-            <li><a href="#" data-page="products_hair">헤어라인</a></li>
-            <li><a href="#" data-page="products_facial">페이셜라인</a></li>
+            <li><a href="#product" data-page="product">전체보기</a></li>
+            <li><a href="#product_body" data-page="product_body">바디라인</a></li>
+            <li><a href="#product_hair" data-page="product_hair">헤어라인</a></li>
+            <li><a href="#product_facial" data-page="product_facial">페이셜라인</a></li>
           </ul>
         </li>
         <li class="menuLarge">R&D
           <ul class="menuSmall">
-            <li><a href="#" data-page="rndTechnology">테크놀로지</a></li>
-            <li><a href="#" data-page="rndResearch">연구분야</a></li>
-            <li><a href="#" data-page="rndProduction">생산시설</a></li>
+            <li><a href="#rndTechnology" data-page="rndTechnology">테크놀로지</a></li>
+            <li><a href="#rndResearch" data-page="rndResearch">연구분야</a></li>
+            <li><a href="#rndProduction" data-page="rndProduction">생산시설</a></li>
           </ul>
         </li>
         <li class="menuLarge">Press
           <ul class="menuSmall">
-            <li><a href="#" data-page="press">PRESS</a></li>
-            <li><a href="#" data-page="press_news">NEWS</a></li>
+            <li><a href="#press" data-page="press">PRESS</a></li>
+            <li><a href="#press_news" data-page="press_news">NEWS</a></li>
           </ul>
         </li>
         <li class="menuLarge">Contact
           <ul class="menuSmall">
-            <li><a href="#" data-page="contact">CONTACT</a></li>
-            <li><a href="#" data-page="contact_address">DIRECTIONS</a></li>
+            <li><a href="#contact" data-page="contact">CONTACT</a></li>
+            <li><a href="#contact_address" data-page="contact_address">DIRECTIONS</a></li>
           </ul>
         </li>
-
       </ul>
     </div>
   </section>
-  <script src="/js/sitemap.js" defer></script>
 </body>
 </html>
