--- a/pages/home.html
+++ b/pages/home.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vyor Clone | Home</title>
-    <link rel="stylesheet" href="../css/home.css" />
-    <script src="../js/home.js" defer></script>
+    <!-- <link rel="stylesheet" href="../css/home.css" />
+    <script src="../js/home.js" defer></script> -->
   </head>
 
   <body>
@@ -58,18 +58,18 @@
     </section>
 
     <!-- ================= PRODUCT SECTION ================= -->
-    <section id="home_product">
+    <section id="home_product" class="home_fade-item">
       <div class="home_product-inner">
         <div class="home_product-text">
-          <span class="home_subtitle">PRODUCT</span>
-          <h2>Refined in the City,<br />Rooted in Nature</h2>
-          <p>
-            VYOR은 감각적인 도시의 스타일에 비건 철학과<br />
-            자연에서 온 클린 성분만을 고집합니다.
+          <span class="home_subtitle home_slide-item">PRODUCT</span>
+          <h2 class="home_slide-item">Refined in the City,<br />Rooted in Nature</h2>
+          <p class="home_slide-item">
+            VYOR은 감각적인 도시의 스타일에 비건 철학과 자연에서 온 클린 성분만을 고집합니다.
           </p>
-          <a href="../pages/product.html" class="home_view-more">view more <span>→</span></a>
+          <a href="../pages/product.html" class="home_view-more home_slide-item">view more <span>→</span></a>
         </div>
         <div class="home_product-gallery">
+          
           <div class="home_card">
             <a href="product_body.html">
               <img
@@ -166,16 +166,16 @@
 
         <!-- 오른쪽 텍스트 -->
         <div class="home_rnd-right">
-          <span class="home_subtitle fade-item">R&D</span>
-          <h2 class="home_fade-item">From Nature,<br />Through Science</h2>
-          <h4 class="home_fade-item">자연에서 영감받고, 과학으로 완성하다.</h4>
-          <p class="home_fade-item">
+          <span class="home_subtitle home_slideUp-item">R&D</span>
+          <h2 class="home_slideUp-item">From Nature,<br />Through Science</h2>
+          <h4 class="home_slideUp-item">자연에서 영감받고, 과학으로 완성하다.</h4>
+          <p class="home_slideUp-item">
             R&D 센터는 특화된 기능성 원료를 기반으로 지속적인<br />
             혁신과 창의적인 신제품 개발에 전념하고 있습니다.<br />
             기초 연구에서 응용 연구까지 철저하고 체계적인 접근 방식을 통해<br />
             새로운 제형을 개발하고, 이를 제품화하는 전 과정을 실현하고 있습니다.
           </p>
-          <a href="../pages/rndProduction.html" class="home_view-more">view more <span>→</span></a>
+          <a href="../pages/rndProduction.html" class="home_view-more home_slideUp-item">view more <span>→</span></a>
         </div>
       </div>
     </section>
