--- a/pages/home.html
+++ b/pages/home.html
@@ -15,7 +15,7 @@
      <!-- ================= HERO SECTION ================= -->
     <section id="home_hero" class="home_fade-section">
       <video autoplay muted loop playsinline>
-        <source src="../img/main/main_video.mp4" type="video/mp4" />
+        <source src="img/main/main_video.mp4" type="video/mp4" />
       </video>
 
       <!-- Scroll Indicator -->
@@ -73,7 +73,7 @@
           <div class="home_card">
             <a href="product_body.html">
               <img
-                src="../img/products/thum_img_body_lotion.jpg"
+                src="img/products/thum_img_body_lotion.jpg"
                 alt="바디 로션"
               />
             </a>
@@ -88,7 +88,7 @@
           <div class="home_card">
             <a href="product_body.html">
               <img
-                src="../img/products/thum_img_body_wash.jpg"
+                src="img/products/thum_img_body_wash.jpg"
                 alt="바디워시"
               />
             </a>
@@ -102,7 +102,7 @@
 
           <div class="home_card">
             <a href="product_hair.html">
-              <img src="../img/products/thum_img_shampoo.jpg" alt="샴푸" />
+              <img src="img/products/thum_img_shampoo.jpg" alt="샴푸" />
             </a>
             <h4>VYOR 바이오르 샴푸</h4>
             <p>
@@ -116,7 +116,7 @@
           <div class="home_card">
             <a href="product_hair.html">
               <img
-                src="../img/products/thum_img_treatment.jpg"
+                src="img/products/thum_img_treatment.jpg"
                 alt="트리트먼트"
               />
             </a>
@@ -130,7 +130,7 @@
 
           <div class="home_card">
             <a href="product_facial.html">
-              <img src="../img/products/thum_img_skin.jpg" alt="스킨" />
+              <img src="img/products/thum_img_skin.jpg" alt="스킨" />
               <h4>VYOR 바이오르 크림 스킨</h4>
               <p>
                 Watered Soil - 도시 속의 자연의 향<br />
@@ -141,7 +141,7 @@
           </div>
           <div class="home_card">
             <a href="product_facial.html">
-              <img src="../img/products/thum_img_emulsion.jpg" alt="에멀젼" />
+              <img src="img/products/thum_img_emulsion.jpg" alt="에멀젼" />
             </a>
             <h4>VYOR 바이오르 크림 에멀전</h4>
             <p>
@@ -160,7 +160,7 @@
         <!-- 왼쪽 영상 -->
         <div class="home_rnd-left">
           <video autoplay muted loop playsinline>
-            <source src="../img/main/sec3_video.mp4" type="video/mp4" />
+            <source src="img/main/sec3_video.mp4" type="video/mp4" />
           </video>
         </div>
 
@@ -193,7 +193,7 @@
     <section id="home_contact">
       <div class="home_contact-inner">
         <video autoplay muted loop playsinline>
-          <source src="../img/main/sec4_video.mp4" type="video/mp4" />
+          <source src="img/main/sec4_video.mp4" type="video/mp4" />
         </video>
         </div>
          <div class="home_press-text fade-item">
