--- a/pages/product.html
+++ b/pages/product.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     
-    <link rel="stylesheet" href="../css/product.css">
+    <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css">
 </head>
 <body>
 <!-- product_main 공통 -->
     <div class="product_main">
         <video class="product_video" autoplay muted  loop playsinline>
-            <source src="../img/products/00.video.mp4">
+            <source src="img/products/00.video.mp4">
         </video>
         <div class="product_mainTxt">
             <h1>Products</h1>
@@ -32,10 +32,10 @@
     <div class="product_page2">
         <div class="product_p2Inbox">
             <div class="product_p2Img1">
-                <img src="../img/products/m21_cate0_img1.jpg" alt="img1">
+                <img src="img/products/m21_cate0_img1.jpg" alt="img1">
             </div>
             <div class="product_p2Img2">
-                <img src="../img/products/m21_cate0_img2.jpg" alt="img1">
+                <img src="img/products/m21_cate0_img2.jpg" alt="img1">
             </div>
             <div class="product_p2txt1">
                 <h2 style="font-weight: 500;">Signature Scents.<br>Urban Spirit Nature Soul.</h2>
@@ -59,7 +59,7 @@
                 <a href="product_body_lotion.html" class="product_page3_link">
                     <div class="product_page3_gridBox_product">
                         <div class="product_page3_imgbox">
-                            <img src="../img/products/thum_img_body_lotion.jpg" alt="bodylotion">
+                            <img src="img/products/thum_img_body_lotion.jpg" alt="bodylotion">
                         </div>
                         <div class="product_page3_textBox">
                             <h3>VYOR 바이오르 바디로션</h3>
@@ -69,7 +69,7 @@
                 </a>
                 <div class="product_page3_gridBox_product">
                     <div class="product_page3_imgbox">
-                        <img src="../img/products/thum_img_body_wash.jpg" alt="bodylotion">
+                        <img src="img/products/thum_img_body_wash.jpg" alt="bodylotion">
                     </div>
                     <div class="product_page3_textBox">
                         <h3>VYOR 바이오르 바디 워시</h3>
@@ -79,7 +79,7 @@
                 <a href="product_hair_shampoo.html" class="product_page3_link">
                     <div class="product_page3_gridBox_product">
                         <div class="product_page3_imgbox">
-                            <img src="../img/products/thum_img_shampoo.jpg" alt="shampoo">
+                            <img src="img/products/thum_img_shampoo.jpg" alt="shampoo">
                         </div>
                         <div class="product_page3_textBox">
                             <h3>VYOR 바이오르 샴푸</h3>
@@ -89,7 +89,7 @@
                 </a>
                 <div class="product_page3_gridBox_product">
                     <div class="product_page3_imgbox">
-                        <img src="../img/products/thum_img_treatment.jpg" alt="bodylotion">
+                        <img src="img/products/thum_img_treatment.jpg" alt="bodylotion">
                     </div>
                     <div class="product_page3_textBox">
                         <h3>VYOR 바이오르 트리트먼트</h3>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="product_page3_gridBox_product">
                     <div class="product_page3_imgbox">
-                        <img src="../img/products/thum_img_skin.jpg" alt="bodylotion">
+                        <img src="img/products/thum_img_skin.jpg" alt="bodylotion">
                     </div>
                     <div class="product_page3_textBox">
                         <h3>VYOR 바이오르 크림 스킨</h3>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="product_page3_gridBox_product">
                     <div class="product_page3_imgbox">
-                        <img src="../img/products/thum_img_emulsion.jpg" alt="bodylotion">
+                        <img src="img/products/thum_img_emulsion.jpg" alt="bodylotion">
                     </div>
                     <div class="product_page3_textBox">
                         <h3>VYOR 바이오르 크림 에멀젼</h3>
