--- a/pages/product_facial.html
+++ b/pages/product_facial.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="../css/product.css">
+    <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css">
 </head>
 <body>
 <!-- product_main 공통 -->
     <div class="product_main">
         <video class="product_video" autoplay muted  loop playsinline>
-            <source src="../img/products/00.video.mp4">
+            <source src="img/products/00.video.mp4">
         </video>
         <div class="product_mainTxt">
             <h1>Products</h1>
@@ -32,7 +32,7 @@
 <div class="product_2page_same">
     <div class="product_2page_samegridBox">
         <div class="product_2page_samegrid">
-            <img src="../img/products/m21_cate1_img.jpg" alt="productbody">
+            <img src="img/products/m21_cate1_img.jpg" alt="productbody">
         </div>
         <div class="product_2page_samegrid">
             <div class="product_2page_gridT">
@@ -58,7 +58,7 @@
             <div class="product_page3_gridBox">
                 <div class="product_page3_gridBox_product">
                     <div class="product_page3_imgbox">
-                        <img src="../img/products/thum_img_skin.jpg" alt="bodylotion">
+                        <img src="img/products/thum_img_skin.jpg" alt="bodylotion">
                     </div>
                     <div class="product_page3_textBox">
                         <h3>VYOR 바이오르 크림 스킨</h3>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="product_page3_gridBox_product">
                     <div class="product_page3_imgbox">
-                        <img src="../img/products/thum_img_emulsion.jpg" alt="bodylotion">
+                        <img src="img/products/thum_img_emulsion.jpg" alt="bodylotion">
                     </div>
                     <div class="product_page3_textBox">
                         <h3>VYOR 바이오르 크림 에멀젼</h3>
