--- a/pages/product_hair_shampoo.html
+++ b/pages/product_hair_shampoo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="../css/product.css">
+    <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css">
 
 </head>
@@ -13,7 +13,7 @@
     <!-- product_main 공통 -->
     <div class="product_main">
         <video class="product_video" autoplay muted  loop playsinline>
-            <source src="../img/products/00.video.mp4">
+            <source src="img/products/00.video.mp4">
         </video>
         <div class="product_mainTxt">
             <h1>Products</h1>
@@ -34,13 +34,13 @@
         <div class="product_detail_gridBox">
             <div class="product_detail_grid">
                 <div class="product_detail_imgbox">
-                    <img src="../img/products/thum_img_shampoo.jpg" alt="">
+                    <img src="img/products/thum_img_shampoo.jpg" alt="">
                 </div>
             </div>
             <div class="product_detail_grid">
                 <a href="../pages/product_hair.html" class="product_detail_gridT1">
                     <p>view list</p>
-                    <div><img src="../img/etc/icon/btnMore_arr2.png" alt="arr2"></div>
+                    <div><img src="img/etc/icon/btnMore_arr2.png" alt="arr2"></div>
                 </a>
                 <div class="product_detail_gridT2">
                     <p>NMN<span class="gridT2_bar"></span>트라넥사믹애씨드<span class="gridT2_bar"></span>나이아신아마이드</p>
